--- a/Contador de votação IPG/style.css
+++ b/Contador de votação IPG/style.css
@@ -1,23 +1,17 @@
 body {
     font-family: Verdana, Tahoma, sans-serif;
     background: #ddd;
-}
-
-h1 {
-    text-align: center;
-}
-
-h2 {
-    text-align: center;
-}
-
-h3 {
-    margin-top: 30px;
+    max-width: 900px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 fieldset {
     padding: 20px 15px;
-    margin-bottom: 30px;
+    margin: 15px 0px;
+    width: 100%;
 }
 
     .legend {
@@ -25,12 +19,29 @@ fieldset {
         font-size: 1.1rem;
     }
 
+.title {
+    display: flex;
+    justify-content: center;
+}
+
+.reg_form {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
 .main_div {
     display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
 }
 
 .sub_div {
-    padding: 0px 6.25% 0 6.25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .votos {
@@ -41,7 +52,9 @@ fieldset {
 .total_div {
     font-size: 1.3rem;
     font-weight: bold;
-    margin: 0 25%;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
 }
 
 #saveVote-btn {
